// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LongTextTooltip component should render 1`] = `
<LongTextTooltip
  content=""
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span />
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content tooltip in a different spot with different width 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="10vw"
  tooltipPosition="left"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content with maxLength 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={50}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content with maxLength shorter than content 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={1}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <div>
        Lorem Impsum
      </div>
    }
    distance={15}
    enableFlip={true}
    entryDelay={500}
    exitDelay={500}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    maxWidth="50vw"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <PopoverBase
      appendTo={[Function]}
      aria="describedby"
      arrow={true}
      boundary="window"
      content={
        <div
          className=""
          id=""
          role="tooltip"
        >
          <Unknown
            isLeftAligned={false}
          >
            <div>
              Lorem Impsum
            </div>
          </Unknown>
        </div>
      }
      delay={
        Array [
          500,
          500,
        ]
      }
      distance={15}
      flip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      lazy={true}
      maxWidth="50vw"
      onCreate={[Function]}
      placement="top"
      popperOptions={
        Object {
          "modifiers": Object {
            "hide": Object {
              "enabled": true,
            },
            "preventOverflow": Object {
              "enabled": true,
            },
          },
        }
      }
      theme="pf-tooltip"
      trigger="mouseenter focus"
      zIndex={9999}
    >
      <div>
        …
      </div>
      <Portal
        containerInfo={
          <div>
            <div
              class=""
              id=""
              role="tooltip"
            >
              <div
                class="pf-c-tooltip__content"
              >
                <div>
                  Lorem Impsum
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className=""
          id=""
          role="tooltip"
        >
          <Component
            isLeftAligned={false}
          >
            <div
              className="pf-c-tooltip__content"
            >
              <div>
                Lorem Impsum
              </div>
            </div>
          </Component>
        </div>
      </Portal>
    </PopoverBase>
  </Tooltip>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="bottom"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 2`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="left"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 3`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="right"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;
